--- a/16grindgame.html
+++ b/16grindgame.html
@@ -122,7 +122,7 @@
     <script>
         const backContent = [
             "食物", "天氣", "愛情", "張韶涵", "五月天", "地點", "數字",
-            "身體部位", "情緒", "城市", "周傑倫", "時間", "盧廣仲",
+            "身體部位", "情緒", "城市", "周杰倫", "時間", "盧廣仲",
             "動物", "大自然", "顏色"
         ];
 
