--- a/16grindgame.html
+++ b/16grindgame.html
@@ -15,19 +15,19 @@
         }
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-template-rows: repeat(4, 100px);
-            gap: 10px;
+            grid-template-columns: repeat(4, 150px); /* 每格寬度放大到 150% */
+            grid-template-rows: repeat(4, 150px);   /* 每格高度放大到 150% */
+            gap: 15px; /* 格子間的間距適當放大 */
         }
         .grid-item {
-            width: 100px;
-            height: 100px;
+            width: 150px; /* 放大 */
+            height: 150px; /* 放大 */
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #4CAF50;
             color: white;
-            font-size: 24px;
+            font-size: 36px; /* 放大字體到 150% */
             cursor: pointer;
             transition: transform 0.6s;
             transform-style: preserve-3d;
