--- a/16grindgame.html
+++ b/16grindgame.html
@@ -121,9 +121,9 @@
 
     <script>
         const backContent = [
-            "食物", "天氣", "愛情", "張韶涵", "五月天", "地點", "數字",
-            "身體部位", "情緒", "城市", "周杰倫", "時間", "盧廣仲",
-            "動物", "大自然", "顏色"
+            "楊丞琳", "交通工具", "城市", "廣告歌", "A-Lin", "周杰倫", "顏色",
+            "食物", "愛情", "費玉清", "星球", "兒歌", "大自然",
+            "台新", "動物", "過年"
         ];
 
         function flipCard(card, index) {
